--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@
 }
 section.resume-section {
     display: flex;
-    padding: 20px 20px 50px 20px;
+    padding: 0px 20px 50px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -188,7 +188,7 @@ section.resume-section .resume-section-content {
 @media screen and (min-width: 768px) {
     section.resume-section {
         
-        padding: 50px 100px 50px 100px;
+        padding: 0px 100px 50px 100px;
     }
 }
 /* 992px <-> 1200px */
@@ -196,7 +196,7 @@ section.resume-section .resume-section-content {
     
     section.resume-section {
         margin-left: 320px;
-        padding-top: 50px;
+        padding-top: 0px;
         /* padding-right: 150px; */
     }
 }
@@ -207,6 +207,7 @@ section.resume-section .resume-section-content {
     margin-top: 0px;
     padding-left: 20px;
     padding-right: 20px;
+    position: relative;
 }
 #jumbotron .resume-section-content{
     display: flex;
@@ -214,6 +215,16 @@ section.resume-section .resume-section-content {
     align-items: center;
 }
 /* Title name */
+#jumbotron .location{
+    position: absolute;;
+    font-size: 14px;
+    color: white;
+    margin: 0;
+    right: 0;
+    bottom: 0;
+    padding-right: 30px;
+    padding-bottom: 20px;
+}
 #jumbotron .resume-section-content h1{
     font-size: calc(20px + 5.7vw);
     font-weight: 700;
@@ -269,7 +280,7 @@ section.resume-section .resume-section-content {
         font-size: 18px;
         padding-left: calc(0.9vw);
         color: white;
-        text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.8);
+        text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
     }
     /* Description */
     #jumbotron .resume-section-content .lead {
@@ -278,7 +289,7 @@ section.resume-section .resume-section-content {
         font-weight: 400;
         padding-left: 10px;
         color: white;
-        text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.8);
+        text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
         text-align: justify;
         margin-top: 0px;
     }
