--- a/css/main.css
+++ b/css/main.css
@@ -426,6 +426,11 @@ section.resume-section .resume-section-content {
 }
 
 /* Experience */
+#experience a {
+    text-decoration: none;
+    color: rgba(107, 166, 206, 1);
+}
+
 #experience .school-logo{
     max-width: 130px;
     max-height: 130px;
